<resources>
    <string name="mi_app_name">My Intent</string>
    <string name="mi_title_mi_activity">@string/mi_app_name</string>
    <string name="mi_start">Start</string>
    <string name="mi_actions">Actions</string>
    <string name="mi_ask_for_intent">What\'s your intent?</string>
    <string name="mi_search_settings_description">Saved MyIntent commands.</string>
    <string name="mi_user_agent_suffix">MyIntent/0.2</string>
    <string name="mi_rules">Rules</string>
    <string name="mi_help">Help</string>
    <string name="mi_name">name</string>
    <string name="mi_description">description</string>
    <string name="mi_match">match</string>
    <string name="mi_replace">replace</string>
    <string name="mi_level">level</string>
    <string name="mi_time">time</string>
    <string name="mi_message">message</string>
    <string name="mi_re_rules_intro">Here you can analyze and edit RE rules that controls how commands are processed. Only rules from \"user\" group are
        editable. You can remove any rule from \"user\" group by swiping it left or right. You can reorder any rule in \"user\" group by holding it and
        moving up or down. Our RE rules are just Java Regular Expressions.</string>
    <string name="mi_reset_all">Reset all app settings</string>
    <string name="mi_add_new_user_rule">Add new user rule</string>
    <string name="mi_are_you_sure_reset">Are you sure? All user changes will be revoked.</string>
    <string name="mi_reset">Reset</string>
    <string name="mi_cancel">Cancel</string>
    <string name="mi_clear_user_rules">Clear user RE rules</string>
    <string name="mi_re_help">RE Help</string>
    <string name="mi_search">Search</string>
    <string name="mi_recent_commands">Recent commands</string>
    <string name="mi_example_commands">Example commands</string>
    <string name="mi_my_test_activity">My Test Activity</string>
    <string name="mi_start_my_test_activity">Start MyTestActivity</string>
    <string name="mi_debug_stuff">Debug stuff</string>
    <string name="mi_clear_log_history">Clear log history</string>
    <string name="mi_orientation_portrait">Orientation: Portrait</string>
    <string name="mi_orientation_landscape">Orientation: Landscape</string>
    <string name="mi_orientation_unspecified">Orientation: Unspecified</string>
    <string name="mi_about">About</string>
</resources>
