<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp_sections"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/mi_start"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/mi_start"
            android:titleCondensed="cmd:fragment .MILogFragment"
            />
        <item
            android:id="@+id/mi_rules"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/mi_rules"
            android:titleCondensed="cmd:fragment .MIRulesFragment"
            />
        <item
            android:id="@+id/mi_recent_commands"
            android:icon="@drawable/ic_youtube_searched_for_black_24dp"
            android:title="@string/mi_recent_commands"
            android:titleCondensed="cmd:fragment .MIRecentCmdListFragment"
            />
        <item
            android:id="@+id/mi_example_commands"
            android:icon="@drawable/ic_find_replace_black_24dp"
            android:title="@string/mi_example_commands"
            android:titleCondensed="cmd:fragment .MIExampleCmdListFragment"
            />
        <item
            android:id="@+id/mi_help"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/mi_help"
            android:titleCondensed="cmd:fragment .MIHelpFragment"
            />
    </group>

    <item
        android:id="@+id/item_global_actions"
        android:title="@string/mi_actions"
        >
        <menu>
            <item
                android:id="@+id/reset_all"
                android:icon="@drawable/ic_whatshot_black_24dp"
                android:title="@string/reset_all"
                />
        </menu>
    </item>
</menu>