<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/re_rule_ro_editable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_gravity="right"
        android:text="editable: NO"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_name"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/re_rule_ro_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mi_custom_entry"
        tools:text="some rule name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_description"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/re_rule_ro_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mi_custom_entry"
        tools:text="some rule description"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_match"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/re_rule_ro_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mi_custom_entry"
        tools:text="^rule(match) blabla$"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_replace"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/re_rule_ro_replace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mi_custom_entry"
        tools:text="$1 blabla $2 bleble $3"
        />

</LinearLayout>