<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_message"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/log_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mi_custom_entry"
        tools:text="blablabalallll"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_time"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/log_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mi_custom_entry"
        tools:text="66:66:66"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_level"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/log_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mi_custom_entry"
        tools:text="INFO"
        />

</LinearLayout>