<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_name"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/re_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mi_custom_entry"
        tools:text="some group"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_description"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/re_group_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textSize="@dimen/mi_custom_entry"
        android:textColor="@android:color/black"
        tools:text="some group description blabla.."
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/mi_match"
        android:textColor="?colorPrimaryDark"
        android:textSize="@dimen/mi_custom_title"
        />

    <TextView
        android:id="@+id/re_group_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/mi_custom_entry"
        tools:text="^(.fjdsl)*$"
        />

</LinearLayout>